I commit at 1:08 /use enum to set status